Исправил пути файлов для продакшена

--- a/src/blocks/modules/footer/footer.html
+++ b/src/blocks/modules/footer/footer.html
@@ -16,6 +16,6 @@
       <a href="#" class="footer__link--alone footer_list"><span>Фотостудия</span><span>Bosco Internet
           Boutique</span></a>
     </div>
-    <a href="#" class="footer-logo__link"><img src="../img/svg/footer-logo.svg" alt="" class="footer-logo__logo"></a>
+    <a href="#" class="footer-logo__link"><img src="./img/svg/footer-logo.svg" alt="" class="footer-logo__logo"></a>
   </div>
 </footer>
