--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -1,6 +1,6 @@
 <header class="delivery__header">
   <div class="header-top">
-    <a href="#"><img src="./img/svg/logo.svg" alt="" class="header-top__logo"></a>
+    <a href="./"><img src="./img/svg/logo.svg" alt="" class="header-top__logo"></a>
     @@include("../../components/secondary-nav/secondary-nav.html")
   </div>
   <div class="header__promo">
