Правки по шрифтам и отступам в шапке + Убрал Zoom scroll на картах

--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -1,11 +1,12 @@
 <header class="delivery__header">
-  <div class="header-top">
-    <a href="./"><img src="./img/svg/logo.svg" alt="" class="header-top__logo"></a>
-    @@include("../../components/secondary-nav/secondary-nav.html")
+  <div class="header-top__wrapper">
+    <div class="header-top">
+      <a href="./"><img src="./img/svg/logo.svg" alt="" class="header-top__logo"></a>
+      @@include("../../components/secondary-nav/secondary-nav.html")
+    </div>
   </div>
   <div class="header__promo">
     <div class="promo__wrapper">
-      <img src="./img/svg/like.svg" alt="" class="promo__svg">
       <p class="promo__text">Встречайте наш сервис доставки для интернет-магазинов одежды, аксессуаров, косметики и
         товаров для дома!
       </p>
