--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -15,7 +15,8 @@
   </div>
   <div class="header__promo">
     <div class="promo__wrapper">
-      <p class="promo__text">Встречайте наш сервис фотосъёмки для интернет-магазинов одежды, аксессуаров, косметики и
+      <p class="promo__text">Встречайте наш сервис фотосъёмки для&nbsp;интернет-магазинов одежды, аксессуаров, косметики
+        и
         товаров для дома. Под ключ!
       </p>
     </div>
